--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,8 @@ p {
 body {
 	width: 100%;
 	margin: 0 auto;
-	padding: 0 20px 20px 20px;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
+	padding: 20px 20px 20px 20px;
+
 }
 
 .button-link-inactive{
