--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,14 @@ h1 {
 	color: black;
 }
 
+h2 {
+	font-size: 40px;
+	text-align: left;
+	margin: 0;
+	padding: 20px 0;
+	color: black;
+}
+
 p {
 	width: 100%;
 	font-size: 17px;
