--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ div {
 	display: block;
 }
 
-.local-press {
+.centered {
   width: 30%; /* Adjust the width as needed */
   margin: auto;
   /*position: absolute;*/
