--- a/styles.css
+++ b/styles.css
@@ -42,9 +42,9 @@ div {
 }
 
 .centered {
-  width: 30%; /* Adjust the width as needed */
+  width: 1000px; /* Adjust the width as needed */
   margin: auto;
-  /*position: absolute;*/
+  /*position: static;*/
   top: 50%;
   left: 50%;
 }
