--- a/styles.css
+++ b/styles.css
@@ -145,3 +145,30 @@ hr {
     text-align: center; /* Center the heading text */
     margin-bottom: 10px; /* Add some space below the heading */
 }
+
+/* Style the text within the the card */
+.card p {
+	text-align: justify; /* justify the bio text */
+	margin-bottom: 10px;
+}
+
+/* Style the LinkedIn button */
+.linkedin-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #0077b5; /* LinkedIn blue color */
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+/* Change button background on hover */
+.linkedin-button:hover {
+    background-color: #005885;
+
+
+
+
+
+
