--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ hr {
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    font-size: 13px;
 }
 
 /* Change button background on hover */
