fixed copy button for all citations

--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,6 @@ hr {
 
 
 
-
 /* copy button for APA citation */
 #copyContainerAPA {
     display: flex;
@@ -223,7 +222,55 @@ hr {
     margin-left: 10px; /* Add margin to the left of the button */
 }
 
+/* copy button for Chicago citation */
+#copyContainerChicago {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+#textToCopyChicago {
+    background-color: #f0f0f0;
+    padding: 10px;
+    border: 1px solid black;
+    margin-bottom: 10px;
+    flex: 1; /* Allow the text to take available space */
+}
+
+#copyButtonChicago {
+    background-color: white;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 13px;
+    margin-left: 10px; /* Add margin to the left of the button */
+}
+
+/* copy button for MLA citation */
+#copyContainerMLA {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#textToCopyMLA {
+    background-color: #f0f0f0;
+    padding: 10px;
+    border: 1px solid black;
+    margin-bottom: 10px;
+    flex: 1; /* Allow the text to take available space */
+}
+
+#copyButtonMLA {
+    background-color: white;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 13px;
+    margin-left: 10px; /* Add margin to the left of the button */
+}
 
 
 
