--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,12 @@ li {
 .linkedin-button:hover {
     background-color: #005885;
 } 
+
+.dlbutton {
+	color: #fff;
+	font-size: 20px;
+	display: inline-block;
+	padding: 10px 20px;
+	text-decoration: none;
+	background-color: #1b4965;
+}
