--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,13 @@ h3 {
 	color: whitesmoke;
 }
 
+h4 {
+	font-size: 25px;
+	text-align: center;
+	margin: 0;
+	color: black;
+}
+
 p {
 	width: 100%;
 	font-size: 17px;
