fixed the download data button again

--- a/styles.css
+++ b/styles.css
@@ -314,3 +314,33 @@ li {
     font-size: 13px;
     margin-left: 10px; /* Add margin to the left of the button */
 }
+
+#wordcloud-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.wordcloud-card {
+    text-align: center;
+    width: 45%;
+    max-width: 45%;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.wordcloud-title {
+    font-weight: bold;
+    color: black;
+    margin-bottom: 5px; /* Add some margin below the title */
+}
+
+.wordcloud-image {
+    max-width: 100%;
+    height: auto;
+}
+
